Add OSC feedback and operator learning system
Major Features:
- Bidirectional OSC communication - receive feedback from console
- Operator behavior learning - monitor and analyze human operators
- Error tracking - capture failed commands for learning
- Pattern recognition - identify workflows and timing
- Behavior insights - AI-powered analysis with recommendations

New Tools (5):
- eos_get_feedback_log - Query OSC messages from console
- eos_get_recent_errors - View failed commands
- eos_get_operator_actions - Monitor operator activities
- eos_get_operator_insights - Analyze behavior patterns
- eos_clear_feedback_log - Reset learning history

Enhanced Files:
- src/eos_client.py: Comprehensive OSC receiver with categorized handlers
- src/server.py: Added EOS_ENABLE_RX and EOS_RX_PORT configuration
- src/tools/feedback.py: New module with all feedback tools

Documentation:
- FEEDBACK_GUIDE.md: Complete guide with examples and troubleshooting
- CHANGELOG.md: Project change tracking
- README.md: Updated with feedback features

Configuration:
- EOS_ENABLE_RX=true to enable feedback reception
- EOS_RX_PORT=3033 for listening port (matches console TX port)

Total tools: 19 (was 14)
- 4 patch, 5 cue, 2 effect, 3 palette, 5 feedback

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 # MCP Server Framework
 mcp>=1.0.0
 
+# Environment variable management
+python-dotenv>=1.0.0
+
 # OSC Communication
 python-osc>=1.8.0
 
